# triangles_wgpu

./: Cargo.toml
src/: camera.rs  cli.rs  cube.rs  geometry.rs  grid.rs  lib.rs  main.rs  shader.wgsl  shader1.wgsl  surf_rot.rs  texture.rs  vertex.rs
src/geometry/: cube.rs  grid.rs  surf_rot.rs
