[package]
name = "triangles_wgpu"
version = "0.1.0"
authors = ["Mark Zander <mark.of.zander@icloud.com", "Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2021"
default-run = "triangles_wgpu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.3.0"
wgpu = "0.15.0"
winit = "0.28.1"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.15.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "triangles_wgpu"
path = "src/main.rs"


